src/objects/E2_Week_Milestone_Template__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <description>Store the date of the week created in the milestone template.</description>
        <inlineHelpText>Store the date of the week created in the milestone template.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Library__c</fullName>
        <description>Milestone library with which the week is associated .</description>
        <inlineHelpText>Milestone library with which the week is associated .</inlineHelpText>
        <label>Milestone Library</label>
        <referenceTo>E2_Milestone_Library__c</referenceTo>
        <relationshipLabel>Week Milestone Template</relationshipLabel>
        <relationshipName>Week_Milestone_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Store the order number of the week created in the milestone.</description>
        <inlineHelpText>Store the order number of the week created in the milestone.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Week Milestone Template</label>
    <nameField>
        <label>Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Week Milestone Template</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>